--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,11 +19,17 @@ jobs:
     - name: Build
       run: go build -v cmd/gokub-tester/main.go
     
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    
     - name: Push to Docker Hub
       uses: docker/build-push-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
         platforms: linux/arm64
-        repository: horvatic/gokub-tester
-        tag_with_ref: true
+        context: .
+        file: ./Dockerfile
+        push: true 
+        tags: horvatic/gokub-tester:latest
