--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,9 @@ jobs:
         
     - name: Build
       run: go build -v cmd/gokub-tester/main.go
+      
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
     
     - name: Login to DockerHub
       uses: docker/login-action@v1 
