--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -11,3 +11,9 @@ spec:
       ports:
         - containerPort: 8080
           name: "gokub-http"
+      livenessProbe:
+        httpGet:
+          path: /health
+          port: 8080
+        initialDelaySeconds: 3
+        periodSeconds: 3
