--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -13,7 +13,7 @@ spec:
           name: "gokub-http"
       livenessProbe:
         httpGet:
-          path: /health
+          path: /healthz
           port: 8080
         initialDelaySeconds: 3
         periodSeconds: 3
