--- a/deploy/base/ingress.yaml
+++ b/deploy/base/ingress.yaml
@@ -6,7 +6,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /gokub
+      - path: /default/gokub
         pathType: Prefix
         backend:
           service:
