--- a/deploy/dev/ingress.yaml
+++ b/deploy/dev/ingress.yaml
@@ -7,3 +7,9 @@ spec:
   - http:
       paths:
       - path: /dev/gokub
+        pathType: Prefix
+        backend:
+          service:
+            name: gokub-tester
+            port:
+              number: 8080
