Update and rename docker-image.yml to build-deploy.yml

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,8 +1,8 @@
-name: Docker Image CI
+name: build-deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [ feature/cideploy ]
 
 jobs:
   build:
