--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -16,26 +16,26 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
         
-#     - name: Build
-#       run: go build -v cmd/gokub-tester/main.go
+    - name: Build
+      run: go build -v cmd/gokub-tester/main.go
       
-#     - name: Set up QEMU
-#       uses: docker/setup-qemu-action@v1
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
     
-#     - name: Login to DockerHub
-#       uses: docker/login-action@v1 
-#       with:
-#         username: ${{ secrets.DOCKER_USERNAME }}
-#         password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     
-#     - name: Push to Docker Hub
-#       uses: docker/build-push-action@v2
-#       with:
-#         platforms: linux/arm64
-#         context: .
-#         file: ./Dockerfile
-#         push: true 
-#         tags: horvatic/gokub-tester:latest
+    - name: Push to Docker Hub
+      uses: docker/build-push-action@v2
+      with:
+        platforms: linux/arm64
+        context: .
+        file: ./Dockerfile
+        push: true 
+        tags: horvatic/gokub-tester:latest
         
     - name: Kubectl tool installer
       uses: Azure/setup-kubectl@v1
