--- a/deploy/dev/deployment.yaml
+++ b/deploy/dev/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: gokub-tester
+  labels:
+    app: gokub-tester
 spec:
   containers:
     - name: gokub-tester
