--- a/deploy/base/deployment.yaml
+++ b/deploy/base/deployment.yaml
@@ -1,30 +1,35 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: gokub-tester
   labels:
     app: gokub-tester
 spec:
-  containers:
-    - name: gokub-tester
-      image: horvatic/gokub-tester
-      env:
-        - name: NAMESPACE
-          valueFrom:
-            configMapKeyRef: 
-              name: gokub-config
-              key: namespace 
-        - name: SERVICE
-          valueFrom:
-            configMapKeyRef: 
-              name: gokub-config
-              key: service 
-      ports:
-        - containerPort: 8080
-          name: "gokub-http"
-      livenessProbe:
-        httpGet:
-          path: /health
-          port: 8080
-        initialDelaySeconds: 3
-        periodSeconds: 3
+  selector:
+    matchLabels:
+      app: gokub-tester
+  template:
+    spec:
+      containers:
+      - name: gokub-tester
+        image: horvatic/gokub-tester
+        env:
+          - name: NAMESPACE
+            valueFrom:
+              configMapKeyRef: 
+                name: gokub-config
+                key: namespace 
+          - name: SERVICE
+            valueFrom:
+              configMapKeyRef: 
+                name: gokub-config
+                key: service 
+        ports:
+          - containerPort: 8080
+            name: "gokub-http"
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 3
+          periodSeconds: 3
