--- a/deploy/dev/deployment.yaml
+++ b/deploy/dev/deployment.yaml
@@ -1,15 +1,21 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: gokub-tester
   labels:
     app: gokub-tester
 spec:
-  containers:
-    - name: gokub-tester
-      livenessProbe:
-        httpGet:
-          path: /dev/gokub/health
-          port: 8080
-        initialDelaySeconds: 3
-        periodSeconds: 3
+  template:
+    metadata:
+      name: gokub-tester
+      labels:
+        app: gokub-tester
+    spec:
+      containers:
+      - name: gokub-tester
+        livenessProbe:
+          httpGet:
+            path: /dev/gokub/health
+            port: 8080
+          initialDelaySeconds: 3
+          periodSeconds: 3
