add limit for revision history

--- a/deploy/prod/deployment.yaml
+++ b/deploy/prod/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     app: gokub-tester
 spec:
   replicas: 2
+  revisionHistoryLimit : 5
   template:
     metadata:
       name: gokub-tester
